# oecddatabuilder

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: recipe.json
datasets/OECD/: Y.csv
src/oecddatabuilder/: __init__.py  databuilder.py  oecddatabuilder.py  recipe.py  recipe_loader.py  utils.py
tests/: test_databuilder.py  test_recipe_loader  test_recipe_loader.py  test_utils.py
tutorial/: tutorial.ipynb
