[project]
name = "oecddatabuilder"
version = "0.1.0"
description = "This is a tool for using OECD API builder and creating multiple time series dataframe for economic analysis purposes"
authors = [
    {name = "minkeymouse",email = "minkey.chang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lxml (>=5.3.2,<6.0.0)"
]

[tool.poetry]
packages = [{include = "oecddatabuilder", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
